include/livesplit_core.h

struct Run_s;
typedef struct Run_s *restrict Run;
typedef struct Run_s *restrict RunRefMut;
typedef struct Run_s const* RunRef;
struct SharedTimer_s;
typedef struct SharedTimer_s *restrict SharedTimer;
struct Time_s;
typedef struct Time_s *restrict Time;
typedef struct Time_s const* TimeRef;
struct TimeSpan_s;
typedef struct TimeSpan_s *restrict TimeSpan;
typedef struct TimeSpan_s const* TimeSpanRef;
struct Timer_s;
typedef struct Timer_s *restrict Timer;
typedef struct Timer_s *restrict TimerRefMut;
typedef struct Timer_s const* TimerRef;
/**
Creates a new Timer based on a Run object storing all the information
about the splits. The Run object needs to have at least one segment, so
that the Timer can store the final time. If a Run object with no
segments is provided, the Timer creation fails and NULL is returned.
*/
Timer Timer_new(Run run);
/**
Consumes the Timer and creates a Shared Timer that can be shared across
multiple threads with multiple owners.
*/
SharedTimer Timer_into_shared(Timer self);
/**
Takes out the Run from the Timer and resets the current attempt if there
is one in progress. If the splits are to be updated, all the information
of the current attempt is stored in the Run's history. Otherwise the
current attempt's information is discarded.
*/
Run Timer_into_run(Timer self, bool update_splits);
/**
Frees the object, allowing it to clean up all of its memory. You need
to call this for every object that you don't use anymore and hasn't
already been freed.
*/
void Timer_drop(Timer self);
/**
Returns the currently selected Timing Method.
*/
uint8_t Timer_current_timing_method(TimerRef self);
/**
Returns the current comparison that is being compared against. This may
be a custom comparison or one of the Comparison Generators.
*/
char const* Timer_current_comparison(TimerRef self);
/**
Returns whether Game Time is currently initialized. Game Time
automatically gets uninitialized for each new attempt.
*/
bool Timer_is_game_time_initialized(TimerRef self);
/**
Returns whether the Game Timer is currently paused. If the Game Timer is
not paused, it automatically increments similar to Real Time.
*/
bool Timer_is_game_time_paused(TimerRef self);
/**
Accesses the loading times. Loading times are defined as Game Time - Real Time.
*/
TimeSpanRef Timer_loading_times(TimerRef self);
/**
Returns the current Timer Phase.
*/
uint8_t Timer_current_phase(TimerRef self);
/**
Accesses the Run in use by the Timer.
*/
RunRef Timer_get_run(TimerRef self);
/**
Saves the Run in use by the Timer as a LiveSplit splits file (*.lss).
*/
char const* Timer_save_as_lss(TimerRef self);
/**
Prints out debug information representing the whole state of the Timer. This
is being written to stdout.
*/
void Timer_print_debug(TimerRef self);
/**
Returns the current time of the Timer. The Game Time is NULL if the Game
Time has not been initialized.
*/
TimeRef Timer_current_time(TimerRef self);
/**
Replaces the Run object used by the Timer with the Run object provided. If
the Run provided contains no segments, it can't be used for timing and is
not being modified. Otherwise the Run that was in use by the Timer gets
stored in the Run object provided. Before the Run is returned, the current
attempt is reset and the splits are being updated depending on the
`update_splits` parameter. The return value indicates whether the Run got
replaced successfully.
*/
bool Timer_replace_run(TimerRefMut self, RunRefMut run, bool update_splits);
/**
Sets the Run object used by the Timer with the Run object provided. If the
Run provided contains no segments, it can't be used for timing and gets
returned again. If the Run object can be set, the original Run object in use
by the Timer is disposed by this method and NULL is returned.
*/
Run Timer_set_run(TimerRefMut self, Run run);
/**
Starts the Timer if there is no attempt in progress. If that's not the
case, nothing happens.
*/
void Timer_start(TimerRefMut self);
/**
If an attempt is in progress, stores the current time as the time of the
current split. The attempt ends if the last split time is stored.
*/
void Timer_split(TimerRefMut self);
/**
Starts a new attempt or stores the current time as the time of the
current split. The attempt ends if the last split time is stored.
*/
void Timer_split_or_start(TimerRefMut self);
/**
Skips the current split if an attempt is in progress and the
current split is not the last split.
*/
void Timer_skip_split(TimerRefMut self);
/**
Removes the split time from the last split if an attempt is in progress
and there is a previous split. The Timer Phase also switches to
`Running` if it previously was `Ended`.
*/
void Timer_undo_split(TimerRefMut self);
/**
Resets the current attempt if there is one in progress. If the splits
are to be updated, all the information of the current attempt is stored
in the Run's history. Otherwise the current attempt's information is
discarded.
*/
void Timer_reset(TimerRefMut self, bool update_splits);
/**
Pauses an active attempt that is not paused.
*/
void Timer_pause(TimerRefMut self);
/**
Resumes an attempt that is paused.
*/
void Timer_resume(TimerRefMut self);
/**
Toggles an active attempt between `Paused` and `Running`.
*/
void Timer_toggle_pause(TimerRefMut self);
/**
Toggles an active attempt between `Paused` and `Running` or starts an
attempt if there's none in progress.
*/
void Timer_toggle_pause_or_start(TimerRefMut self);
/**
Removes all the pause times from the current time. If the current
attempt is paused, it also resumes that attempt. Additionally, if the
attempt is finished, the final split time is adjusted to not include the
pause times as well.

# Warning

This behavior is not entirely optimal, as generally only the final split
time is modified, while all other split times are left unmodified, which
may not be what actually happened during the run.
*/
void Timer_undo_all_pauses(TimerRefMut self);
/**
Sets the current Timing Method to the Timing Method provided.
*/
void Timer_set_current_timing_method(TimerRefMut self, uint8_t method);
/**
Switches the current comparison to the next comparison in the list.
*/
void Timer_switch_to_next_comparison(TimerRefMut self);
/**
Switches the current comparison to the previous comparison in the list.
*/
void Timer_switch_to_previous_comparison(TimerRefMut self);
/**
Initializes Game Time for the current attempt. Game Time automatically
gets uninitialized for each new attempt.
*/
void Timer_initialize_game_time(TimerRefMut self);
/**
Deinitializes Game Time for the current attempt.
*/
void Timer_deinitialize_game_time(TimerRefMut self);
/**
Pauses the Game Timer such that it doesn't automatically increment
similar to Real Time.
*/
void Timer_pause_game_time(TimerRefMut self);
/**
Resumes the Game Timer such that it automatically increments similar to
Real Time, starting from the Game Time it was paused at.
*/
void Timer_resume_game_time(TimerRefMut self);
/**
Sets the Game Time to the time specified. This also works if the Game
Time is paused, which can be used as away of updating the Game Timer
periodically without it automatically moving forward. This ensures that
the Game Timer never shows any time that is not coming from the game.
*/
void Timer_set_game_time(TimerRefMut self, TimeSpanRef time);
/**
Instead of setting the Game Time directly, this method can be used to
just specify the amount of time the game has been loading. The Game Time
is then automatically determined by Real Time - Loading Times.
*/
void Timer_set_loading_times(TimerRefMut self, TimeSpanRef time);